# unify

./: .gitignore  INTERNALS.md  README.md  connections.yaml  connections_example.yaml  db_wrapper.py  dotenv_template  email_helper.py  grammar.lark  package-lock.json  package.json  parsing_utils.py  pyproject.toml  requirements.txt  rest_schema.py  scheduler.py  schemata.py  test.py  unify.code-workspace  unify.py  updater.py
docs/: ADAPTERS.md  BUILDING_CONNECTORS.md  CHARTING.md  CLICKHOUSE.md  CONNECTORS.md  FILES.md  IMPORTING_DATA.md  INFORMATION_SCHEMA.md  INTERNALS.md  JUPYTER.md  MULTI_TENANCY.md  NOTEBOOKS.md  SQL_LANGUAGE.md  TODO.md  TUTORIAL.md  UNIFY_SCHEMA.md
gsheets/: gsheets_adapter.py  gsheets_connector.py  gsheets_grammar.lark
mocksvc/: mocksvc.py
notebooks/: AtlasProjectStats.ipynb  Build Employees table.ipynb  Coder Stats.ipynb  Deployments.ipynb  Incident Stats.ipynb  aws_costs.ipynb  daily_prs_email.ipynb  eng_ramp_stats.ipynb
rest_specs/: aws_costs_spec.yaml  coda_spec.yaml  datadog_spec.yaml  github_spec.yaml  gsearch_spec.yaml  gsheets_spec.yaml  hubspot_spec.yaml  jira_spec.yaml  mocksvc_spec.yaml  postgres_spec.yaml  spec_doc.yaml  stripe_spec.yaml
tests/: test_pagers.py  test_parser.py  test_rest_calls.py  test_rest_schema.py  test_scheduler.py  test_storage_manager.py  test_tablescans.py  test_unify_kernel.py  test_variables.py
unify/: __init__.py  __main__.py  adapters.py  command_repl.py  config.py  connections.yaml  connectors.py  data_utils.py  db_wrapper.py  email_helper.py  features.py  file_adapter.py  filesystem.py  (+16 more)
(+52 files in other folders)
