[tool.poetry]
name = "unify"
version = "0.1.0"
description = "Personal data warehouse"
authors = ["Scott Persinger <scottpersinger@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.5.2"
lark = "^1.1.5"
pyaml = "^21.10.1"
sqlglot = "^10.3.2"
pyarrow = "^10.0.1"
requests = "^2.28.1"
jsonpath-ng = "^1.5.3"
google-auth-oauthlib = "^0.8.0"
duckdb = "^0.6.1"
clickhouse-driver = "^0.2.5"
signaling = "^1.0.0"
prompt-toolkit = "^3.0.36"
google-api-python-client = "^2.70.0"
sqlalchemy = "^1.4.45"
clickhouse-sqlalchemy = "^0.2.3"
requests-aws4auth = "^1.1.2"
persist-queue = "^0.8.0"
pyzmq = "^24.0.1"
google-auth-httplib2 = "^0.1.0"
daemonocle = "^1.2.3"
redmail = "^0.4.2"
pytest = "^7.2.0"
ipykernel = "^6.19.4"
ipynbname = "^2021.3.2"


[tool.poetry.group.dev.dependencies]
pdb-attach = "^3.0.0"
requests-mock = "^1.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
